--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
         android:src="@mipmap/ic_launcher" />
 
     <Button
+        android:id="@+id/button_login_by_facebook"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp20"
@@ -26,6 +27,7 @@
         android:textSize="@dimen/sp14" />
 
     <Button
+        android:id="@+id/button_login_by_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_login"
