--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,18 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-
+    <color name="charcoal">#363e2e</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="gray">#818181</color>
+    <color name="light_gray">#f9f9f9</color>
+    <color name="light_gray_two">#f5f5f5</color>
     <color name="black_two">#0b0b0b</color>
+    <color name="gray_two">#898989</color>
+    <color name="gray_three">#e6e6e6</color>
+    <color name="orange">#ff761a</color>
+
+
 
 
 </resources>
