--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,11 +8,9 @@
     android:gravity="center"
     tools:context=".activity.SplashActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="GOAT"
-        android:textColor="@color/black"
-        android:textSize="@dimen/sp22" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@mipmap/ic_logo" />
 
 </LinearLayout>
